--- a/templates/notes.html
+++ b/templates/notes.html
@@ -26,7 +26,7 @@
                     </h1><br/>
                 </div>
             {% endfor %}
-            <a class="firework_button" href="/notes/add">Add Pattern</a>
+            <a class="firework_button" href="/notes/add">Add Note</a>
         </div>
         <script src="/static/js/socketio.js"></script>
         <script src="/static/js/notes.js"></script>
