--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <li class="navbar-item-li"><a class="navbar-item" onclick="manage_notes()" id="notesbutton">Notes</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/patterns">Patterns</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
       <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
     </ul>
     <div id="hamburgerExpandMenu">
@@ -22,7 +22,7 @@
         <a class="navbar-item-expanded" onclick="manage_notes()" id="notesbutton_">Notes</a>
         <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
-        <a class="navbar-item-expanded" href="/patterns">Patterns</a>
+        <a class="navbar-item-expanded" href="/sequences">Sequences</a>
     </div>
     <div class="content" id="content">
       {% for launcher in launchers %}
@@ -53,7 +53,7 @@
       var launchers = "{{ launchers_parsed }}".split(":");
       var launcher_counts = JSON.parse('{{ launcher_counts | safe }}');
       var notes = JSON.parse('{{ notes | safe }}');
-      var patterns = JSON.parse('{{ patterns | safe }}');
+      var sequences = JSON.parse('{{ sequences | safe }}');
     </script>
     <script src="/static/js/socketio.js"></script>
     <script src="/static/js/main.js"></script>
