--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,7 @@
       <div class="inner-modal">
         <h3 style="margin-top: 0;" id="launcher-indicator"></h3>
         <h3 id="firework-indicator"></h3>
+        <p id="special_characters" style="display: none">Please do not use special characters</p>
         <input placeholder="Note" class="note_box" type="text" id="note_content">
         <div class="modal-button">
           <button class="firework_button" onclick="add_note()">Add</button>
