--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Profiles</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="resetbutton">Reset all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="manage_notes()" id="notesbutton">Notes</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
       <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
@@ -20,7 +20,7 @@
         <a class="navbar-item-expanded" onclick="dev();" id="devbutton_">Profiles</a>
         <a class="navbar-item-expanded" onclick="reset_all()" id="resetbutton">Reset all</a>
         <a class="navbar-item-expanded" onclick="manage_notes()" id="notesbutton_">Notes</a>
-        <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
+        <a class="navbar-item-expanded" href="/settings">Settings</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
         <a class="navbar-item-expanded" href="/sequences">Sequences</a>
     </div>
