--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -21,7 +21,7 @@
         <form enctype="multipart/form-data" action="/settings/update" method="POST">
           <h3>Update <input type="file" name="update" accept=".tar.gz"><button type=submit>Upload</button></h3>
         </form>
-        <a class="firework_button" href="/settings/launchers">Launchers</a>
+        <a class="firework_button" href="/settings/launchers">Launchers</a><br/>
         <a class="firework_button" href="/settings/terminals">Terminals</a>
       </div>
       <script>
