--- a/templates/settings/launchers/launchers.html
+++ b/templates/settings/launchers/launchers.html
@@ -19,7 +19,11 @@
     <div class="settings_content">
         <h1>Launchers</h1>
         {% for launcher in launchers %}
-            <h2 id="launcher_{{ launchers[launcher] }}">{{ launcher }} ({{ launchers[launcher] }}) <button id="remove_{{ launchers[launcher] }}" class="firework_button" onclick="remove_launcher('{{ launchers[launcher] }}')">Remove</button><button id="addonstart_{{ launchers[launcher] }}" class="firework_button {% if launchers[launcher] in add_on_start %}addonstart_on{% else %}addonstart_off{% endif %}" onclick="launcher_addonstart('{{ launchers[launcher] }}')">Add on start</button></h2>
+            <h2 id="launcher_{{ launchers[launcher] }}">{{ launcher }} ({{ launchers[launcher] }}) 
+              <button id="remove_{{ launchers[launcher] }}" class="firework_button" onclick="remove_launcher('{{ launchers[launcher] }}')">Remove</button>
+              <button id="addonstart_{{ launchers[launcher] }}" class="firework_button {% if launchers[launcher] in add_on_start %}addonstart_on{% else %}addonstart_off{% endif %}" onclick="launcher_addonstart('{{ launchers[launcher] }}')">Add on start</button>
+              <a class="firework_button" href="/settings/launchers/edit_fp/start{{ urlencode(launchers[launcher], safe='') }}">Edit Profiles</a>
+            </h2>
         {% endfor %}
         <a class="firework_button" href="/settings/launchers/add">Add Launcher</a>
     </div>
