--- a/static/css/main.css
+++ b/static/css/main.css
@@ -319,6 +319,10 @@ h5 {
     border: 2px solid #ff2667;
 }
 
+.disarmed {
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 720px) {
     .navbar-item {
         display: none;
