Add branding config file

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="/static/css/main.css" rel="stylesheet">
-    <title>Firework Launcher</title>
+    <title>{{ name }}</title>
   </head>
   <body>
     <ul class="navbar">
-      <li class="navbar-item-li"><a class="navtitle" href="/">Firework Launcher</a></li>
+      <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Profiles</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="resetbutton">Reset all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="manage_notes()" id="notesbutton">Notes</a></li>
