--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link href="/static/css/main.css" rel="stylesheet">
-        <title>Firework Launcher - Login</title>
+        <title>{{ name }} - Login</title>
     </head>
     <body>
         <form style="text-align: center" method="POST">
