--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="/static/css/main.css" rel="stylesheet">
-    <title>Firework Launcher - Settings</title>
+    <title>{{ name }} - Settings</title>
   </head>
   <body>
     <ul class="navbar">
-        <li class="navbar-item-li"><a class="navtitle" href="/">Firework Launcher</a></li>
+        <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
         <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
