--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link href="/static/css/main.css" rel="stylesheet">
-    <title>{{ name }} - Settings</title>
-  </head>
-  <body>
-    <ul class="navbar">
-        <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
-        <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
-      </ul>
-      <div id="hamburgerExpandMenu">
-        <a class="navbar-item-expanded" href="/settings">Settings</a>
-        <a class="navbar-item-expanded" href="/sequences">Sequences</a>
-      </div>
-      <div class="settings_content">
-        <h1>Settings</h1>
-        <form enctype="multipart/form-data" action="/settings/update" method="POST">
-          <h3>Update <input type="file" name="update" accept=".tar.gz"><button type=submit>Upload</button></h3>
-        </form>
-        <a class="firework_button" href="/settings/launchers">Launchers</a><br/>
-        <a class="firework_button" href="/settings/terminals">Terminals</a>
-      </div>
-      <script>
-        function expand_hamburger () {
-            menu = document.getElementById("hamburgerExpandMenu");
-            if (menu.style.display == "block") {
-                menu.style.display = "none";
-            } else {
-                menu.style.display = "block";
-            }
-        }
-      </script>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+<div class="settings_content">
+  <h1>Settings</h1>
+  <form enctype="multipart/form-data" action="/settings/update" method="POST">
+    <h3>Update <input type="file" name="update" accept=".tar.gz"><button type=submit>Upload</button></h3>
+  </form>
+  <a class="firework_button" href="/settings/launchers">Launchers</a><br/>
+  <a class="firework_button" href="/settings/terminals">Terminals</a>
+</div>
+
+{% endblock %}
