--- a/templates/settings/launchers/add.html
+++ b/templates/settings/launchers/add.html
@@ -1,50 +1,35 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link href="/static/css/main.css" rel="stylesheet">
-    <title>{{ name }} - Add launcher</title>
-  </head>
-  <body>
-    <ul class="navbar">
-        <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" href="/sequences">Sequences</a></li>
-        <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
-      </ul>
-      <div id="hamburgerExpandMenu">
-        <a class="navbar-item-expanded" href="/settings">Settings</a>
-        <a class="navbar-item-expanded" href="/sequences">Sequences</a>
-      </div>
-      {% if error %}
-        <p class="error">Launcher does not exist</p>
-      {% endif %}
-      <form method="POST" class="themebuttons">
-        <h1>Add Launcher</h1>
-        <label for="type">Launcher Type: </label>
-        <select name="type" id="type">
-          {% for launcher_type in type_metadata %}
-            <option value="{{ launcher_type }}">{{ type_metadata[launcher_type]['pretty_name'] }}</option>
-          {% endfor %}
-        </select>
-        <p>Launcher Name</p>
-        <input name="launcher_name" type="text" pattern="^[a-zA-Z 0-9.,+-]*$" required="true">
-        <p>Port</p>
-        <input name="port" type="text" pattern="^[a-zA-Z 0-9.,+-/]*$" required="true">
-        <p>Channel Count</p>
-        <input name="count" type="number" required="true">
-        <br/>
-        <button type="submit" class="themebutton">Add</button>
-      </form>
-      <script>
-        function expand_hamburger () {
-            menu = document.getElementById("hamburgerExpandMenu");
-            if (menu.style.display == "block") {
-                menu.style.display = "none";
-            } else {
-                menu.style.display = "block";
-            }
-        }
-      </script>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+{% if error %}
+  <p class="error">Launcher does not exist</p>
+{% endif %}
+<form method="POST" class="themebuttons">
+  <h1>Add Launcher</h1>
+  <label for="type">Launcher Type: </label>
+  <select name="type" id="type">
+    {% for launcher_type in type_metadata %}
+      <option value="{{ launcher_type }}">{{ type_metadata[launcher_type]['pretty_name'] }}</option>
+    {% endfor %}
+  </select>
+  <p>Launcher Name</p>
+  <input name="launcher_name" type="text" pattern="^[a-zA-Z 0-9.,+-]*$" required="true">
+  <p>Port</p>
+  <input name="port" type="text" pattern="^[a-zA-Z 0-9.,+-/]*$" required="true">
+  <p>Channel Count</p>
+  <input name="count" type="number" required="true">
+  <br/>
+  <button type="submit" class="themebutton">Add</button>
+</form>
+<script>
+  function expand_hamburger () {
+      menu = document.getElementById("hamburgerExpandMenu");
+      if (menu.style.display == "block") {
+          menu.style.display = "none";
+      } else {
+          menu.style.display = "block";
+      }
+  }
+</script>
+
+{% endblock %}
