--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="/static/css/main.css" rel="stylesheet">
+    <link href="/branding.css" rel="stylesheet">
     <title>{{ name }}</title>
   </head>
   <body>
