Add more functionality with arming, add more support for ESP nodes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -333,6 +333,10 @@ h5 {
     opacity: 0.5;
 }
 
+.disconnected {
+    opacity: 0;
+}
+
 @media screen and (max-width: 720px) {
     .navbar-item {
         display: none;
