--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,8 @@
     <ul class="navbar">
       <li class="navbar-item-li"><a class="navtitle" href="/">{{ name }}</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Profiles</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="resetbutton">Reset all</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" onclick="arm_all()" {% if lfa_armed %}style="display: none"{% endif %} id="armbutton">Arm all</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" onclick="disarm_all()" {% if not lfa_armed %}style="display: none"{% endif %} id="disarmbutton">Disarm all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="manage_notes()" id="notesbutton">Notes</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/settings">Settings</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
@@ -19,7 +20,9 @@
     </ul>
     <div id="hamburgerExpandMenu">
         <a class="navbar-item-expanded" onclick="dev();" id="devbutton_">Profiles</a>
-        <a class="navbar-item-expanded" onclick="reset_all()" id="resetbutton">Reset all</a>
+        <a class="navbar-item-expanded" onclick="reset_all()" id="resetbutton_">Reset all</a>
+        <a class="navbar-item-expanded" onclick="arm_all()" {% if lfa_armed %}style="display: none"{% endif %} id="armbutton_">Arm all</a>
+        <a class="navbar-item-expanded" onclick="disarm_all()" {% if not lfa_armed %}style="display: none"{% endif %} id="disarmbutton_">Disarm all</a>
         <a class="navbar-item-expanded" onclick="manage_notes()" id="notesbutton_">Notes</a>
         <a class="navbar-item-expanded" href="/settings">Settings</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
