--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link href="/static/css/main.css" rel="stylesheet">
+        {% block css %}
+        
+        {% endblock %}
         <link href="/branding.css" rel="stylesheet">
         <title>{{ name }} - {{ page }}</title>
     </head>
