Add save text and fix bug with parser

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -342,6 +342,11 @@ h5 {
     text-align: center;
 }
 
+.save_text {
+    display: none;
+    text-align: center;
+}
+
 @media screen and (max-width: 720px) {
     .navbar-item {
         display: none;
